update install and spec file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,9 +41,9 @@ set_target_properties(LMBd PROPERTIES OUTPUT_NAME LMBd)
 
 include(GNUInstallDirs)
 
-install(TARGETS LMBd
-		RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-		)
-
+install(TARGETS LMBd RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
+install(FILES config/LMBd.conf DESTINATION ${CMAKE_INSTALL_SYSCONFDIR})
+install(FILES scripts/zabbix_stats.cfg DESTINATION ${CMAKE_INSTALL_SYSCONFDIR})
+install(FILES scripts/zabbix_stats.py DESTINATION ${CMAKE_INSTALL_BINDIR})
 
 
