--- a/config/LMBd.conf
+++ b/config/LMBd.conf
@@ -1,6 +1,6 @@
 {
     "serial": {
-        "port": "\/dev\/ttyUSB0"
+        "port": "\/dev\/ttyUSB1"
     },
     "debug": {
         "level": "0"
@@ -9,10 +9,12 @@
     "password": "password",
     "enablepass": "enable",
     "monitorpath": "\/tmp\/test\/",
+    "ConsoleLogging": "true",
+    "ConsoleLogLevel": "INFO",
     "startupmessage": {
         "1": "\\DW - \\DD\/\\DL\/\\DY - \\DH:\\DM:\\DS",
         "2": "No Messages ~S",
-        "3": "test message 3",
+        "3": "",
         "4": "",
         "5": "",
         "6": ""
