--- a/scripts/lmbd.service
+++ b/scripts/lmbd.service
@@ -5,8 +5,8 @@ After=network.target
 
 [Service]
 Type=simple
-User=nobody
-Group=nobody
+User=root
+Group=root
 ExecStart=/usr/bin/LMBd --config /etc/LMBd.conf
 
 # Give the script some time to startup
