--- a/scripts/zabbix-stats.service
+++ b/scripts/zabbix-stats.service
@@ -9,6 +9,7 @@ Type=simple
 User=root
 Group=root
 ExecStart=/usr/bin/python /usr/bin/zabbix_stats.py -c /etc/zabbix_stats.cfg
+Restart=always
 
 # Give the script some time to startup
 TimeoutSec=300
